force-app/main/default/objects/Invoice__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <summarizedField>Invoice_Entry__c.Amount__c</summarizedField>
    <summaryForeignKey>Invoice_Entry__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>