force-app/main/default/objects/Invoice__c/fields/Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid__c</fullName>
    <label>Amount Paid</label>
    <summarizedField>Invoice_Payment__c.Amount__c</summarizedField>
    <summaryForeignKey>Invoice_Payment__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>