force-app/main/default/objects/Invoice__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Intacct Generated</inlineHelpText>
    <label>Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>