force-app/main/default/objects/Invoice__c/fields/LastInvoiceSentDT__c.field-meta.xml
<CustomField>
    <fullName>LastInvoiceSentDT__c</fullName>
    <inlineHelpText>Last time &quot;Send Invoice&quot; button was used.</inlineHelpText>
    <label>Last Invoice Sent Date</label>
    <type>DateTime</type>
</CustomField>