force-app/main/default/objects/Invoice__c/fields/Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Restrictions__c</fullName>
    <label>Restrictions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10008</fullName>
                <label>General Unrestricted</label>
            </value>
            <value>
                <fullName>10007</fullName>
                <label>Reserve - Annual Meeting</label>
            </value>
            <value>
                <fullName>10006</fullName>
                <label>Reserve - Building</label>
            </value>
            <value>
                <fullName>10005</fullName>
                <label>Reserve - Operations Restricted</label>
            </value>
            <value>
                <fullName>10004</fullName>
                <label>Reserve - Operations Unrestricted</label>
            </value>
            <value>
                <fullName>10003</fullName>
                <label>Reserve - Technology</label>
            </value>
            <value>
                <fullName>10002</fullName>
                <label>With Donor Restriction</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>