force-app/main/default/objects/Invoice__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <defaultValue>&apos;Draft&apos;</defaultValue>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>