force-app/main/default/objects/Invoice__c/listViews/Unpaid.listView-meta.xml
<ListView>
    <fullName>Unpaid</fullName>
    <columns>Due_Date__c</columns>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>Amount_Paid__c</columns>
    <columns>Amount_Remaining__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Amount_Remaining__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Unpaid</label>
</ListView>